[package]
name = "util"
version = "0.1.0"
edition = "2021"

[dependencies]
quote = "1.0.37"
syn = { version = "2.0.87", features = ["full"] }

[lib]
proc-macro = true
# https://github.com/rust-lang/rust/issues/125714
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors
